Ajout non fini du cas Vampire et de la baisse de moral